fix: reviews text overflowing on tablet and mobile

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -275,7 +275,6 @@ $desktop_middle_bp: 1160px;
       .testimonial-card {
         width: 95%;
         height: 109px;
-        overflow-y: auto;
         text-align: left;
         padding: 10px 16px 19px 16px;
       }
